se organiza carpeta y se cambia link git

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         </div>
                         <div class="col-md-6"> <!-- link a redes sociales prueba linkdin y github -->
                             <div class="footer-iconos text-end">
-                                <a href="https://github.com/hakunap/GITHUBTest.git"><i class="fa-brands fa-square-github fa-2x m-2"></i></a>
+                                <a href="https://github.com/logout"><i class="fa-brands fa-square-github fa-2x m-2"></i></a>
                                 <a href="https:www.linkedin.com/in/yulibeth-angarita-56672914b"><i class="fa-brands fa-linkedin fa-2x m-2"></i></a>
                                 <a href="#"><i class="fa-brands fa-square-twitter fa-2x m-2"></i></a>
                                 <a href="#"><i class="fa-brands fa-square-facebook fa-2x m-2"></i></a>
